# gdsl-c

./: .gitignore  .travis.yml  CMakeLists.txt  EXAMPLES  LICENSE  README  README.md
src/: CMakeLists.txt  ds_def.h  gdsl_def.h  hashmap.c  hashmap.h  main.c  stack.c  stack.h  vector.c  vector.h
test/: CMakeLists.txt  test-hashmap.c  test-stack.c  test-vec.c
tests/: CMakeLists.txt  test-vec.c
